@@ -13,6 +13,9 @@
    - dtucker@cvs.openbsd.org 2004/06/22 22:55:56
      [regress/dynamic-forward.sh regress/test-exec.sh]
      Allow setting of port for regress from TEST_SSH_PORT variable; ok markus@
+   - mouring@cvs.openbsd.org 2004/06/23 00:39:38
+     [rijndael.c]
+     -Wshadow fix up s/encrypt/do_encrypt/.  OK djm@, markus@
  - (dtucker) [cipher.c] encrypt->do_encrypt inside SSH_OLD_EVP to match
    -Wshadow change.
  - (bal) [Makefile.in] Remove opensshd.init on 'make distclean'
@@ -1393,4 +1396,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3441 2004/06/23 04:04:45 mouring Exp $
+$Id: ChangeLog,v 1.3442 2004/06/23 14:33:48 dtucker Exp $
